# LLVMPass

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_commands.json  run.sh
examples/: denloh.c  main.cpp  main.ll
include/graph/: graph.hpp
include/graph/analyze/: analyze.hpp
include/graph/read/: read_dynamic_info.hpp  read_static_info.hpp
include/graph/write/: write_graph.hpp
include/pass/: dynamic_info.hpp  log_func.h  static_info.hpp  static_info_constants.hpp
scripts/: build_target.sh
source/: LLVMPass.cpp
source/graph/: graph.cpp
source/graph/analyze/: analyze.cpp
source/graph/read/: read_dynamic_info.cpp  read_static_info.cpp
source/graph/write/: write_graph.cpp
source/pass/: dynamic_info.cpp  llvm_pass.cpp  log_func.c  static_info.cpp
